ingress/自定义ingress的hello.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-hello

spec:
  ingressClassName: nginx
  rules:
    - host: hello.djm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-hello
                port:
                  number: 80
    - host: hello2.djm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-hello2
                port:
                  number: 81
